# core

./: .gitignore  Cargo.toml  README.md  release-zsh.sh  release.ps1  release.sh
.github/workflows/: CI.yml  CI_CLI.yml  CI_JS.yml  enki-py-release.yml
crates/bindings/enki-ai/: .gitattributes  Cargo.toml  README.md  package-lock.json  package.json
crates/bindings/enki-ai/.github/workflows/: CI.yml
crates/bindings/enki-js/: .gitignore  Cargo.toml  README.md  browser.js  client.d.ts  client.js  index.d.ts  index.js  package-lock.json  package.json  ts-repro-XXXX.ts  ts-repro-node-XXXX.ts
crates/bindings/enki-js/__test__/: hello_enki.spec.ts  hello_enki_async.spec.ts  hello_enki_with_custom_llm_provider.spec.ts  hello_enki_with_custom_memory.spec.ts  hello_enki_with_tools_and_memory.spec.ts  hello_enki_workflow.spec.ts  index.spec.ts  simple_file_organization_agent.spec.ts  test_agent_wrapper.spec.ts  test_all.spec.ts
crates/bindings/enki-js/scripts/: fix-generated-platform-packages.js
crates/bindings/enki-js/src/: lib.rs
crates/bindings/enki-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/bindings/enki-py/python/enki_py/: __init__.py  agent.py  builder.py
crates/bindings/enki-py/python/enki_py/enki_py/: enki.py
crates/bindings/enki-py/python/tests/: hello_enki.py  hello_enki_async.py  hello_enki_with_custom_llm_provider.py  hello_enki_with_custom_memory.py  hello_enki_workflow.py  simple_file_organization_agent.py  test_agent_wrapper.py  test_all.py  test_multi_agent.py
crates/bindings/enki-py/src/: enki.udl  lib.rs
crates/builder/: Cargo.toml
crates/builder/src/: cli.rs  interactive_cli.rs  main.rs  manifest.rs  project_runtime.rs
crates/builder/src/commands/: agent.rs  build.rs  init.rs  join.rs  mod.rs  monitor.rs  run.rs  test.rs  tool.rs  workflow.rs
crates/builder/templates/py/: pyproject.toml
crates/builder/templates/py/src/: main.py  main.with_tool.py
crates/builder/templates/py/src/tools/: assistant.py
crates/builder/templates/rs/: Cargo.toml.tmpl  enki.toml
crates/builder/templates/rs/src/: main.rs
crates/builder/templates/ts/: package.json  tsconfig.json
crates/builder/templates/ts/src/: index.ts
crates/core/: Cargo.toml  README.md
crates/core/examples/: multi_agent.rs  runtime_builder.rs  simple_agent.rs  workflow.rs
crates/core/src/: lib.rs  macros.rs  main.rs
crates/core/src/agent/: agent_loop.rs  core.rs  mod.rs  tests.rs  types.rs  workspace.rs
crates/core/src/llm/providers/: mod.rs  tests.rs
crates/core/src/memory/: manager.rs  structured.rs  summary.rs  tests.rs
crates/core/src/message/: mod.rs
crates/core/src/registry/: mod.rs  registry.rs  selector.rs  tests.rs  types.rs
crates/core/src/runtime/: builder.rs  channels.rs  core.rs  mod.rs  multi_agent.rs  tests.rs  types.rs
crates/core/src/tooling/: builtin_tools.rs  delegation_tools.rs  human_tools.rs  mod.rs  tool_calling.rs  types.rs
crates/core/src/workflow/: mod.rs  persistence.rs  runtime.rs  tests.rs  types.rs
docs/: agentic_loop.md  architecture.md
docs/enki-doc/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/enki-doc/docs/: agent-design.md  agent-wrapper.md  build-from-source.md  builder-cli.md  examples.md  intro.md  javascript-multi-agent.md  javascript-workflow.md  javascript.md  python-multi-agent.md  python-workflow.md  python.md  rust-workflow.md  rust.md  typescript-multi-agent.md  typescript-workflow.md  typescript.md  wasm-usage.md  workflow-design.md
docs/enki-py/: docusaurus.config.js  sidebars.js
docs/enki-py/docs/: agent-wrapper.md  examples.md  faq.md  installation.md  intro.md  low-level-api.md
docs/enki-py/src/css/: custom.css
example/basic-js/: custom-agent-loop.js  index.js  multi-agent-tools-memory.js  package-lock.json  package.json  react-custom-agent-loop.js  tool-registry.js
example/basic-ts/: agent-workflow.ts  ai_dashboard.xlsx  excel-dashboard-multi-agent.ts  human-intervention-workflow.ts  index.js  index.ts  multi-agent-tools-memory.ts  package-lock.json  package.json  tsconfig.json
example/enki-py/: agent_workflow.py  compare_agent_loops.py  custom_agentic_loop.py  example_simple_agnt.py  excel_dashboard_multi_agent.py  human_intervention_workflow.py  multi_agent_with_memory_and_tools.py  react_custom_agentic_loop.py  simple_agent.py  simple_agent_ollama.py  simple_multi_agent.py  tool_registry.py
example/enki-rs/: Cargo.toml  README.md
example/enki-rs/src/: lib.rs
example/my-app/: README.md  enki.toml  pyproject.toml
example/my-app/src/: main.py
example/my-app/src/agents/: hr_manager_ast.py
example/my-app/src/tools/: weather.py
example/my-workflow-manager/: .gitignore  README.md  enki.toml  pyproject.toml
example/my-workflow-manager/workflows/: release-note-review.toml  research.toml
example/test-node/: README.md  next.config.ts  package-lock.json  package.json
example/test-node/app/: page.tsx
src/: cli_adapter.rs  event.rs  macros.rs  main.rs
src/agent/: mod.rs  workspace.rs
src/llm/providers/: client.rs
src/memory/: manager.rs  router.rs  sliding_window.rs
src/message/: message.rs
src/runtime/: builder.rs  core.rs  mod.rs  tests.rs
src/tooling/: tool_calling.rs  types.rs
