[workspace]
members = ["crates/bindings/enki-js", "crates/bindings/enki-py", "crates/builder", "crates/core"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.5.5"

[workspace.dependencies]
async-trait = "0.1.89"
clap = { version = "4.6.0", features = ["derive"] }
futures = "0.3.32"
llm = { version = "1.3.7", default-features = false, features = ["default-tls", "openai", "anthropic", "ollama", "deepseek", "xai", "phind", "google", "groq", "azure_openai", "elevenlabs", "cohere", "mistral", "openrouter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["full"] }
toml = "1.1.2+spec-1.1.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
strip = "symbols"
