[package]
name = "enki-cli"
edition.workspace = true
version.workspace = true

[[bin]]
name = "enki"
path = "src/main.rs"

[features]
default = []
universal-llm-provider = ["core_next/universal-llm-provider"]

[dependencies]
clap.workspace = true
async-trait.workspace = true
core_next = { path = "../core", package = "core", features = [] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
