[package]
name = "core"
version.workspace = true
edition.workspace = true

[lib]
name = "core_next"

[features]
default = []
universal-llm-provider = ["dep:llm"]

[dependencies]
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
llm = { workspace = true, optional = true }
tokio.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4.2", features = ["wasm_js", "std"] }
tokio = { version = "1.51.0", features = ["sync"] }
