[package]
name = "enki-next"
version.workspace = true
edition.workspace = true
description = "Enki's Rust agent runtime, workflow engine, and shared core abstractions."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/getenki/core"
homepage = "https://docs.getenki.com"
documentation = "https://docs.rs/enki-next"
keywords = ["agent", "workflow", "llm", "runtime", "enki"]
categories = ["asynchronous", "command-line-interface", "development-tools"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"

[lib]
name = "enki_next"

[features]
default = []
universal-llm-provider = ["dep:llm"]

[dependencies]
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
llm = { workspace = true, optional = true }
tokio.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4.2", features = ["wasm_js", "std"] }
tokio = { version = "1.51.0", features = ["sync"] }
