[package]
authors = ["Dewmal <dewmal@syigen.com>","Sadika sadika@syigen.com"]
edition.workspace = true
name = "enki_js"
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.8.4", features = ["tokio_rt", "napi4"] }
napi-derive = "3.5.3"
core_next = { package = "enki", path = "../../core", features = ["default", "universal-llm-provider"] }
async-trait = "0.1.89"
serde.workspace = true
serde_json = "1.0.149"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures = "0.3.31"

[build-dependencies]
napi-build = "2.3.1"
