[package]
name = "enki-py"
version = "0.3.3"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "enki_py"
crate-type = ["cdylib"]

[dependencies]
core_next = { package = "core", path = "../../core" }
async-trait.workspace = true
futures.workspace = true
serde_json.workspace = true
tokio.workspace = true
uniffi = { version = "0.31.0", features = ["tokio"] }

[build-dependencies]
uniffi = { version = "0.31.0", features = ["build"] }
