[package]
name = "enki-py"
version = "0.4.9"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "enki_py"
crate-type = ["cdylib"]

[dependencies]
core_next = { package = "core", path = "../../core", default-features = false }
async-trait.workspace = true
futures.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uniffi = { version = "0.31.0", features = ["tokio"] }

[build-dependencies]
uniffi = { version = "0.31.0", features = ["build"] }
